[gd_scene load_steps=11 format=2]

[ext_resource path="res://CharacterSelection/CharacterSelectionScreen/CharacterSetup/CharacterSetup.gd" type="Script" id=1]
[ext_resource path="res://CharacterSelection/CharacterSelectionScreen/CharacterSetup/SelectionGridPanel.gd" type="Script" id=2]
[ext_resource path="res://CharacterSelection/CharacterSelectionScreen/CharacterSetup/SelectionGrid.gd" type="Script" id=3]
[ext_resource path="res://CharacterSelection/CharacterSelectionScreen/CharacterSetup/CharacterDetailsPanel.gd" type="Script" id=4]
[ext_resource path="res://CharacterSelection/CharacterSelectionScreen/CharacterSetup/CharacterDetails.gd" type="Script" id=5]
[ext_resource path="res://CharacterSelection/CharacterSelectionScreen/CharacterSetup/Inventory.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.65098, 0.537255, 0.152941, 1 )

[sub_resource type="Theme" id=2]
PanelContainer/styles/panel = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.388235, 0.176471, 0.0980392, 1 )

[sub_resource type="Theme" id=4]
PanelContainer/styles/panel = SubResource( 3 )

[node name="CharacterSetup" type="VBoxContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 583.0
margin_bottom = 663.0
rect_min_size = Vector2( 576, 656 )
custom_constants/separation = 0
script = ExtResource( 1 )

[node name="SelectionGridPanel" type="PanelContainer" parent="."]
margin_right = 590.0
margin_bottom = 590.0
script = ExtResource( 2 )

[node name="SelectionGrid" type="GridContainer" parent="SelectionGridPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 583.0
margin_bottom = 583.0
rect_min_size = Vector2( 576, 576 )
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 9
script = ExtResource( 3 )

[node name="CharacterDetailsPanel" type="PanelContainer" parent="."]
margin_top = 590.0
margin_right = 590.0
margin_bottom = 670.0
theme = SubResource( 2 )
script = ExtResource( 4 )

[node name="CharacterDetails" type="VBoxContainer" parent="CharacterDetailsPanel"]
margin_right = 590.0
margin_bottom = 80.0
rect_min_size = Vector2( 576, 80 )
custom_constants/separation = 0
script = ExtResource( 5 )

[node name="DescriptionPanel" type="PanelContainer" parent="CharacterDetailsPanel/CharacterDetails"]
margin_right = 590.0
margin_bottom = 16.0
theme = SubResource( 4 )

[node name="Description" type="Label" parent="CharacterDetailsPanel/CharacterDetails/DescriptionPanel"]
margin_right = 590.0
margin_bottom = 16.0
rect_min_size = Vector2( 576, 16 )
align = 1
valign = 1

[node name="HAlign" type="HBoxContainer" parent="CharacterDetailsPanel/CharacterDetails"]
margin_top = 16.0
margin_right = 590.0
margin_bottom = 80.0
rect_min_size = Vector2( 576, 64 )
custom_constants/separation = 0

[node name="CharacterSprite" type="TextureRect" parent="CharacterDetailsPanel/CharacterDetails/HAlign"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )
expand = true

[node name="Inventory" type="HBoxContainer" parent="CharacterDetailsPanel/CharacterDetails/HAlign"]
margin_left = 64.0
margin_right = 576.0
margin_bottom = 64.0
rect_min_size = Vector2( 512, 64 )
alignment = 2
script = ExtResource( 6 )
